--- a/gba/index.html
+++ b/gba/index.html
@@ -6,8 +6,7 @@
         <meta charset="UTF-8">
     </head>
     <body style="background:rgb(248, 237, 224);">
-        <h1>Welcome to the GBA Emulator</h1>
-        <img src="Binaries/gba.png" alt="GBA Logo">
+        <h1 font-family: "Lucida Console", "Courier New", monospace;>Welcome to the GBA Emulator</h1>
         <h2>Select a game:</h2>
         <main style="border:5px black solid; border-radius:25px; background:rgb(248, 237, 210);padding-left:20px;">
           <ul>
