--- a/gba/index.html
+++ b/gba/index.html
@@ -4,9 +4,18 @@
         <link rel="shortcut icon" href="Binaries/gb.ico">
         <title>GBA Games</title>
         <meta charset="UTF-8">
+        <style>
+            body { 
+                background-color: powderblue; 
+            }
+            h1   { 
+                font-family: "Lucida Console", "Courier New", monospace; 
+            }
+        </style>
     </head>
     <body style="background:rgb(248, 237, 224);">
-        <h1 font-family: "Lucida Console", "Courier New", monospace;>Welcome to the GBA Emulator</h1>
+        <h1 color:"blue";>Welcome to the GBA Emulator
+        </h1>
         <h2>Select a game:</h2>
         <main style="border:5px black solid; border-radius:25px; background:rgb(248, 237, 210);padding-left:20px;">
           <ul>
