--- a/gba/index.html
+++ b/gba/index.html
@@ -11,11 +11,13 @@
             h1   { 
                 font-family: "Lucida Console", "Courier New", monospace; 
             }
+            h2   { 
+                font-family: "Lucida Console", "Courier New", monospace; 
+            }
         </style>
     </head>
-    <body style="background:rgb(248, 237, 224);">
-        <h1 color:"blue";>Welcome to the GBA Emulator
-        </h1>
+    <body>
+        <h1>Welcome to the GBA Emulator</h1>
         <h2>Select a game:</h2>
         <main style="border:5px black solid; border-radius:25px; background:rgb(248, 237, 210);padding-left:20px;">
           <ul>
