--- a/gba/index.html
+++ b/gba/index.html
@@ -10,9 +10,14 @@
             }
             h1   { 
                 font-family: "Lucida Console", "Courier New", monospace; 
+                color: "green";
             }
             h2   { 
                 font-family: "Lucida Console", "Courier New", monospace; 
+                color: "green";
+            }
+            li {
+                  font-family: Arial, Helvetica, sans-serif; 
             }
         </style>
     </head>
