--- a/gba/index.html
+++ b/gba/index.html
@@ -4,10 +4,30 @@
         <link rel="shortcut icon" href="Binaries/gb.ico">
         <title>GBA Games</title>
         <meta charset="UTF-8">
+        <style>
+            body { 
+                background-color: powderblue; 
+            }
+            h1   { 
+                font-family: "Lucida Console", monospace; 
+                color: green;
+            }
+            h2   { 
+                font-family: "Lucida Console", monospace; 
+                color: green;
+            }
+            li {
+                font-family: Trebuchet MS, sans-serif;  
+		    color: red;
+            }
+            h3   { 
+                font-family: "Lucida Console", monospace; 
+                color: blue;
+            }
+        </style>
     </head>
-    <body style="background:rgb(248, 237, 224);">
+    <body>
         <h1>Welcome to the GBA Emulator</h1>
-        <img src="Binaries/gba.png" alt="GBA Logo">
         <h2>Select a game:</h2>
         <main style="border:5px black solid; border-radius:25px; background:rgb(248, 237, 210);padding-left:20px;">
           <ul>
@@ -72,7 +92,7 @@
                           <li><a href="./launcher.html#iridion">Iridion 3D</a></li>
                           <li><a href="./launcher.html#jca">Jackie Chan Adventures - Legend Of The Dark Hand</a></li>
                           <li><a href="./launcher.html#jbn">James Bond 007 - Nightfire</a></li>
-                          <li><a href="./launcher.html#jp3dna">Jurassic Park III - DNA Factor</a></li
+                          <li><a href="./launcher.html#jp3dna">Jurassic Park III - DNA Factor</a></li>
                           <li><a href="./launcher.html#jp3ia">Jurassic Park III - Island Attack</a></li>
                           <li><a href="./launcher.html#jp3pb">Jurassic Park III - Park Builder</a></li>
                           <li><a href="./launcher.html#jlifa">Justice League - Injustice For All</a></li>
