--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 			Other versions
 			<div class="hoverable">
 			<a href="../" target="_blank" id="linkVersionLive">Live version</a>
-			<a href="beta" target="_blank" id="linkVersionBeta">Try the beta!</a>
+			<a href="beta" target="_blank" id="linkVersionBeta">GBA!</a>
 			<a href="//orteil.dashnet.org/cookieclicker/v10466" target="_blank" id="linkVersionOld">v. 1.0466</a>
 			<a href="//orteil.dashnet.org/experiments/cookie/" target="_blank">Classic</a>
 			</div>
