--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 		<div><a href="//orteil.dashnet.org/randomgen/" target="_blank" id="topbarRandomgen">RandomGen</a></div>
 		<div><a href="//orteil.dashnet.org/igm/" target="_blank" id="topbarIGM">Idle Game Maker</a></div>
 		<div id="links" class="hoverer">
-			Other versions
+			hippole :D
 			<div class="hoverable">
 			<a href="../" target="_blank" id="linkVersionLive">Live version</a>
-			<a href="beta" target="_blank" id="linkVersionBeta">GBA</a>
-			<a href="//orteil.dashnet.org/cookieclicker/v10466" target="_blank" id="linkVersionOld">v. 1.0466</a>
+			<a href="beta" target="_blank" id="linkVersionBeta">Try the beta!</a>
+			<a href="/gba" target="_blank" id="linkVersionOld">GBA</a>
 			<a href="//orteil.dashnet.org/experiments/cookie/" target="_blank">Classic</a>
 			</div>
 		</div>
