--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 		<div id="links" class="hoverer">
 			hippole :D
 			<div class="hoverable">
+			<a href="/gba" target="_blank">GBA!</a>
 			<a href="../" target="_blank" id="linkVersionLive">Live version</a>
 			<a href="beta" target="_blank" id="linkVersionBeta">Try the beta!</a>
-			<a href="/gba" target="_blank" id="linkVersionOld">GBA</a>
+			<a href="//orteil.dashnet.org/cookieclicker/v10466" target="_blank" id="linkVersionOld">v. 1.0466</a>
 			<a href="//orteil.dashnet.org/experiments/cookie/" target="_blank">Classic</a>
 			</div>
 		</div>
