--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ Feel free to alter this code to your liking, but please do not re-host it, do no
 			<div class="hoverable">
 			<a href="/gba" target="_blank">GBA!</a>
 			<a href="../" target="_blank" id="linkVersionLive">Live version</a>
-			<a href="beta" target="_blank" id="linkVersionBeta">Try the beta!</a>
+			<a href="beta" target="_blank" id="linkVersionBeta">Try Cookie Clicker Beta!</a>
 			<a href="//orteil.dashnet.org/cookieclicker/v10466" target="_blank" id="linkVersionOld">Old Cookie Clicker (v. 1.0466)</a>
-			<a href="//orteil.dashnet.org/experiments/cookie/" target="_blank">Classic</a>
+			<a href="//orteil.dashnet.org/experiments/cookie/" target="_blank">Cookir Clicker Classic</a>
 			</div>
 		</div>
 	</div>
