--- a/gba/index.html
+++ b/gba/index.html
@@ -9,39 +9,29 @@
                 background-color: powderblue; 
             }
             h1   { 
-<<<<<<< HEAD
                 font-family: "Lucida Console", monospace; 
-                color: green;
+                color: white;
             }
             h2   { 
                 font-family: "Lucida Console", monospace; 
-                color: green;
+                color: white;
             }
             li {
                 font-family: Trebuchet MS, sans-serif;  
-		    color: red;
+		color: powderblue;
             }
-            h3   { 
-                font-family: "Lucida Console", monospace; 
-                color: blue;
-=======
-                font-family: "Lucida Console", "Courier New", monospace; 
-                color: "green";
-            }
-            h2   { 
-                font-family: "Lucida Console", "Courier New", monospace; 
-                color: "green";
-            }
-            li {
-                  font-family: Arial, Helvetica, sans-serif; 
->>>>>>> b50e7b7d53e579e9f9467bfad05ea61450ba3bdc
-            }
+            a:link {
+		color:powderblue;
+	    }
+	    a:visited {
+		color:mediumpurple;
+	    }
         </style>
     </head>
     <body>
         <h1>Welcome to the GBA Emulator</h1>
         <h2>Select a game:</h2>
-        <main style="border:5px black solid; border-radius:25px; background:rgb(248, 237, 210);padding-left:20px;">
+        <main style="border:5px lightgrey solid; border-radius:25px; background:rgb(176, 224, 230);padding-left:20px;">
           <ul>
                           <li><a href="./launcher.html#007">007 - Everything Or Nothing</a></li>
               <li><a href="./launcher.html#advancewars">Advance Wars</a></li>
