--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <h4 class="u-align-center u-text u-text-palette-1-base u-text-7">Coming Soon</h4>
               <p class="u-align-center u-text u-text-palette-1-base u-text-8">Coming Soon<br>What will it be?
               </p>
-              <a href="https://hippole.github.io/null" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-3">Coming Soon</a>
+              <a href="javascipt: void(0);" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-3">Coming Soon</a>
             </div>
           </div>
         </div>
