--- a/gba/index.html
+++ b/gba/index.html
@@ -26,12 +26,16 @@
 	    a:visited {
 		color:mediumpurple;
 	    }
+	    h3 {
+	        font-family: "Lucida Console", monospace; 
+                color: powderblue;
+            }
         </style>
     </head>
     <body>
         <h1>Welcome to the GBA Emulator</h1>
         <h2>Select a game:</h2>
-        <main style="border:5px lightgrey solid; border-radius:25px; background:rgb(176, 224, 230);padding-left:20px;">
+        <main style="border:5px lightgrey solid; border-radius:25px; background:rgb(255, 255, 255);padding-left:20px;">
           <ul>
                           <li><a href="./launcher.html#007">007 - Everything Or Nothing</a></li>
               <li><a href="./launcher.html#advancewars">Advance Wars</a></li>
