--- a/gba/index.html
+++ b/gba/index.html
@@ -224,7 +224,7 @@
               <li><a href="./launcher.html#nesgh1">NES Greatest Hits 1</a></li>
           </ul>
         </main>
-	    <h1>Original by browncha023,small decoration by hippole</h1>
+	    <h1>Small decoration by hippole</h1>
       <h2>For Info On: Game Collections, Controls, And Some Other Cool Stuff. Check Out The Wiki: <a href="https://github.com/Browncha023/GBA/wiki" target="_blank"><img src="Binaries/here.png" alt="here"></a></h2>
     </body>
 </html>
