--- a/gba/index.html
+++ b/gba/index.html
@@ -18,17 +18,17 @@
             }
             li {
                 font-family: Trebuchet MS, sans-serif;  
-		color: powderblue;
+		    color: powderblue;
             }
             a:link {
-		color:powderblue;
-	    }
-	    a:visited {
-		color:mediumpurple;
-	    }
+		    color:lightblue;
+	      }
+	      a:visited {
+		    color:mediumpurple;
+	      }
 	    h3 {
 	        font-family: "Lucida Console", monospace; 
-                color: powderblue;
+                color: white;
             }
         </style>
     </head>
