--- a/gba/index.html
+++ b/gba/index.html
@@ -28,7 +28,7 @@
 	      }
 	    h3 {
 	        font-family: "Lucida Console", monospace; 
-                color: white;
+                color: lightblue;
             }
         </style>
     </head>
