--- a/cookieclicker/index.html
+++ b/cookieclicker/index.html
@@ -82,12 +82,14 @@ var App=typeof App==='undefined'?0:App;
 		<div><a href="//orteil.dashnet.org/igm/" target="_blank" id="topbarIGM">Idle Game Maker</a></div>
 		<div style="float:right;"><a id="changeLanguage" style="font-variant:small-caps;">Change language</a></div>
 		<div id="links" class="hoverer">
-			Other versions
+			hippole :D
 			<div class="hoverable">
-				<a href="../" target="_blank" id="linkVersionLive">Live version</a>
-				<a href="beta" target="_blank" id="linkVersionBeta">Try the beta!</a>
-				<a href="//orteil.dashnet.org/cookieclicker/v10466" target="_blank" id="linkVersionOld">v. 1.0466</a>
-				<a href="//orteil.dashnet.org/experiments/cookie/" target="_blank">Classic</a>
+				<a href="//hippole.github.io" target="_blank">Back to home</a>
+				<a href="//orteil.dashnet.org/cookieclicker" target="_blank">Original Website</a>
+				<!--<a href="../" target="_blank" id="linkVersionLive">Live version</a>-->
+				<!--<a href="beta" target="_blank" id="linkVersionBeta">Try the beta!</a>-->
+				<!--<a href="//orteil.dashnet.org/cookieclicker/v10466" target="_blank" id="linkVersionOld">v. 1.0466</a>-->
+				<!--<a href="//orteil.dashnet.org/experiments/cookie/" target="_blank">Classic</a>-->
 			</div>
 		</div>
 	</div>
