--- a/cookieclicker/index.html
+++ b/cookieclicker/index.html
@@ -86,6 +86,8 @@ var App=typeof App==='undefined'?0:App;
 			<div class="hoverable">
 				<a href="//hippole.github.io" target="_blank">Back to home</a>
 				<a href="//orteil.dashnet.org/cookieclicker" target="_blank">Original Website</a>
+				<a href="../" target="_blank" id="linkVersionLive">filler space 1</a>
+				<a href="beta" target="_blank" id="linkVersionBeta">filler space 2</a>
 				<!--<a href="../" target="_blank" id="linkVersionLive">Live version</a>-->
 				<!--<a href="beta" target="_blank" id="linkVersionBeta">Try the beta!</a>-->
 				<!--<a href="//orteil.dashnet.org/cookieclicker/v10466" target="_blank" id="linkVersionOld">v. 1.0466</a>-->
