--- a/gba/index.html
+++ b/gba/index.html
@@ -18,10 +18,10 @@
             }
             li {
                 font-family: Trebuchet MS, sans-serif;  
-		    color: powderblue;
+		    color: deepskyblue;
             }
             a:link {
-		    color:lightblue;
+		    color:deepskyblue;
 	      }
 	      a:visited {
 		    color:mediumpurple;
