--- a/cookieclicker/index.html
+++ b/cookieclicker/index.html
@@ -82,7 +82,7 @@ var App=typeof App==='undefined'?0:App;
 		<div><a href="//orteil.dashnet.org/igm/" target="_blank" id="topbarIGM">Idle Game Maker</a></div>
 		<div style="float:right;"><a id="changeLanguage" style="font-variant:small-caps;">Change language</a></div>
 		<div id="links" class="hoverer">
-			hippole :D
+			hippole
 			<div class="hoverable">
 				<a href="//hippole.github.io" target="_blank">Back to home</a>
 				<a href="//orteil.dashnet.org/cookieclicker" target="_blank">Original Website</a>
