--- a/cookieclicker/index.html
+++ b/cookieclicker/index.html
@@ -85,7 +85,7 @@ var App=typeof App==='undefined'?0:App;
 			Other Versions
 			<div class="hoverable">
 				<a href="//hippole.github.io" target="_blank">Back to home</a>
-				<a href="beta" target="_blank" id="linkVersionBeta">Original Website</a>
+				<a href="//orteil.dashnet.org/cookieclicker/beta" target="_blank">Original Website</a>
 				<a href="//orteil.dashnet.org/cookieclicker/v10466" target="_blank" id="linkVersionOld">v. 1.0466</a>
 				<a href="//orteil.dashnet.org/experiments/cookie/" target="_blank">Classic</a>
 				<!--<a href="../" target="_blank" id="linkVersionLive">Live version</a>-->
