--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="education">
 
     <title>online educational games</title>
-    <link rel="stylesheet" href="icon.ico">
+    <link rel="icon" href="icon.ico">
     <link rel="stylesheet" href="style.css" media="screen">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     
