--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1">
               <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-1" src="images/cookieclicker.png" alt="" data-image-width="425" data-image-height="415">
               <h4 class="u-align-center u-text u-text-palette-1-base u-text-3">Cookie Clicker</h4>
-              <p class="u-align-center u-text u-text-palette-1-base u-text-4">Play cookie clicker on the latest version (v2.045)!<br>
+              <p class="u-align-center u-text u-text-palette-1-base u-text-4">Play cookie clicker on the latest version!(2.045 beta)<br>
               </p>
               <a href="https://hippole.github.io/cookieclicker" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-1"><span class="u-icon"></span>&nbsp;Play
               </a>
