--- a/gba/index.html
+++ b/gba/index.html
@@ -226,5 +226,6 @@
         </main>
 	    <h1>Small decoration by hippole</h1>
       <h2>For Info On: Game Collections, Controls, And Some Other Cool Stuff. Check Out The Wiki: <a href="https://github.com/Browncha023/GBA/wiki" target="_blank"><img src="Binaries/here.png" alt="here"></a></h2>
-    </body>
+    	    <h1><a href="//hippole.github.io/">Back to home.</a></h1>
+	</body>
 </html>
