--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
         <div class="u-repeater u-repeater-3">
           <div class="u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle u-video-cover u-white u-list-item-4">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4">
-              <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-4" src="images/questionmark.png" alt="" data-image-width="200" data-image-height="200">
-              <h4 class="u-align-center u-text u-text-palette-1-base u-text-9">Coming Soon</h4>
-              <p class="u-align-center u-text u-text-palette-1-base u-text-10"> Coming Soon<br>What will it be?<br>
+              <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-4" src="images/tetris.png" alt="" data-image-width="200" data-image-height="200">
+              <h4 class="u-align-center u-text u-text-palette-1-base u-text-9">Tetris</h4>
+              <p class="u-align-center u-text u-text-palette-1-base u-text-10">Tetris from 1984. Stack blocks but don't go over the top!
               </p>
-              <a href="javascript: void(0)" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-4"><span class="u-icon"></span>Coming Soon
+              <a href="https://hippole.github.io/tetris" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-4"><span class="u-icon"></span>Play
               </a>
             </div>
           </div>
