--- a/tetris/index.html
+++ b/tetris/index.html
@@ -25,7 +25,8 @@
 			<h1 id="levelInfo">Level: <br><span id="level">1</span></h1>
 			<h2 id="scoreInfo">Score: <br><span id="score" >0</span></h2>
 			<div id="rewardInfo" class="invisible">+<span id="reward">0</span></div>
-			<canvas id="preview"></canvas>
+			<h2 style="color: gold;">Next:</h2> 
+                        <canvas id="preview"></canvas>
 		</div>
 	</div>
 </div>
