--- a/tetris/index.html
+++ b/tetris/index.html
@@ -24,7 +24,8 @@
 		<div id="info">
 			<h1 id="levelInfo">Level:<br><span id="level">1</span></h1>
 			<h2 id="scoreInfo">Score:<br><span id="score">0</span></h2>
-			<h5 style="color: gold; font-size: 32px; padding: 0;">Next Block:</h5> 
+			<div id="rewardInfo" class="invisible">+<span id="reward">0</span></div>
+			<h5 style="color: gold; font-size: 32px; margin: 0px;">Next Block:</h5> 
                         <canvas id="preview"></canvas>
 		</div>
 	</div>
