--- a/tetris/index.html
+++ b/tetris/index.html
@@ -17,7 +17,7 @@
 	<div id="gameOver">
 		<h1>Game Over!</h1>
 		<h3>Score: <span id="finalScore">0</span></h3>
-		<h2><a href="#" id="restart">Restart</a></h2>
+		<h2><a href="https://hippole.github.io/tetris" id="restart">Restart</a></h2>
 		
 	</div>
 	<div id="side">
