--- a/tetris/index.html
+++ b/tetris/index.html
@@ -25,7 +25,7 @@
 			<h1 id="levelInfo">Level:<br><span id="level">1</span></h1>
 			<h2 id="scoreInfo">Score:<br><span id="score">0</span></h2>
 			<div id="rewardInfo" class="invisible">+<span id="reward">0</span></div>
-			<h5 style="color: gold; font-size: 20px; margin-bottom: 0px; margin-top: 0px; margin-right: 10px; margin-left: 10px;">Next Block:</h5> 
+			<h5 style="color: gold; font-size: 20px; margin-bottom: 0px; margin-top: 0px; margin-right: 10px; margin-left: 10px;">Next Up:</h5> 
                         <canvas id="preview"></canvas>
 		</div>
 	</div>
