--- a/tetris/index.html
+++ b/tetris/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Tetris</title>
 
-	<link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="style.css" media="screen">
 </head>
 <body>
 <div id="tetris">
