--- a/tetris/index.html
+++ b/tetris/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Tetris</title>
 
+    <link rel="icon" href="https://raw.githubusercontent.com/hippole/hippole.github.io/main/favicon.png">
     <link rel="stylesheet" href="style.css" media="screen">
 </head>
 <body>
