--- a/gba/launcher.html
+++ b/gba/launcher.html
@@ -3,6 +3,111 @@
     <head>
         <link rel="shortcut icon" href="Binaries/gb.ico">
         <title>GBA Emulator</title>
+        <style>
+            body {
+                background-color: coral;
+            }
+            p {
+                text-align: center;
+                color: white;
+                font-size: 64px;
+                font-family: "Lucida Console", monospace; 
+            }
+            .center {
+                justify-content: center;
+            }
+            
+            button {
+             font-family: "Lucida Console", monospace; 
+             position: relative;
+             border: none;
+             background: transparent;
+             padding: 0;
+             cursor: pointer;
+             outline-offset: 4px;
+             transition: filter 250ms;
+             user-select: none;
+             touch-action: manipulation;
+            }
+
+            .shadow {
+             position: absolute;
+             top: 0;
+             left: 0;
+             width: 100%;
+             height: 100%;
+             border-radius: 12px;
+             background: hsl(0deg 0% 0% / 0.25);
+             will-change: transform;
+             transform: translateY(2px);
+             transition: transform
+                600ms
+                cubic-bezier(.3, .7, .4, 1);
+            }
+
+            .edge {
+             position: absolute;
+             top: 0;
+             left: 0;
+             width: 100%;
+             height: 100%;
+             border-radius: 12px;
+             background: linear-gradient(
+                to left,
+                hsl(340deg 100% 16%) 0%,
+                hsl(340deg 100% 32%) 8%,
+                hsl(340deg 100% 32%) 92%,
+                hsl(340deg 100% 16%) 100%
+              );
+            }
+
+            .front {
+             display: block;
+             position: relative;
+             padding: 12px 27px;
+             border-radius: 12px;
+             font-size: 1.1rem;
+             color: white;
+             background: hsl(345deg 100% 47%);
+             will-change: transform;
+             transform: translateY(-4px);
+             transition: transform
+                600ms
+                cubic-bezier(.3, .7, .4, 1);
+            }
+
+            button:hover {
+             filter: brightness(110%);
+            }
+
+            button:hover .front {
+             transform: translateY(-6px);
+             transition: transform
+                250ms
+                cubic-bezier(.3, .7, .4, 1.5);
+            }
+
+            button:active .front {
+             transform: translateY(-2px);
+             transition: transform 34ms;
+            }
+
+            button:hover .shadow {
+             transform: translateY(4px);
+             transition: transform
+                250ms
+                cubic-bezier(.3, .7, .4, 1.5);
+            }
+
+            button:active .shadow {
+             transform: translateY(1px);
+             transition: transform 34ms;
+            }
+
+            button:focus:not(:focus-visible) {
+             outline: none;
+            }
+        </style>
         <meta charset="UTF-8">
             <!--Required Scripts-->
             <script src="IodineGBA/includes/TypedArrayShim.js"></script>
@@ -58,10 +163,17 @@
             <script src="user_scripts/IodineGBAAudioGlueCode.js"></script>
             <script src="user_scripts/IodineGBACoreGlueCode.js"></script>
             <script src="user_scripts/base64.js"></script>
-            <link rel="stylesheet" href="user_css/main.css">
     </head>
     <body>
         <canvas id="emulator_target" width="240px" height="160px"></canvas>
         <span id="tempMessage"></span>
+        <div class="center">
+        <p>Uh oh!<br> not what you're looking for here!</p>
+        <button onclick="window.location.href='https://hippole.github.io/gba'">
+		  <span class="shadow"></span>
+		  <span class="edge"></span>
+		  <span class="front text"> Try again </span>
+		</button>
+        </div>
     </body>
 </html>
