--- a/gba/launcher.html
+++ b/gba/launcher.html
@@ -22,7 +22,6 @@
              position: relative;
              border: none;
              background: transparent;
-             padding: 0;
              cursor: pointer;
              outline-offset: 4px;
              transition: filter 250ms;
@@ -168,7 +167,7 @@
         <canvas id="emulator_target" width="240px" height="160px"></canvas>
         <span id="tempMessage"></span>
         <div class="center">
-        <p>Uh oh!<br> not what you're looking for here!</p>
+        <p>Uh oh!<br>Invalid Game Request!</p>
         <button onclick="window.location.href='https://hippole.github.io/gba'">
 		  <span class="shadow"></span>
 		  <span class="edge"></span>
