--- a/gba/launcher.html
+++ b/gba/launcher.html
@@ -15,12 +15,16 @@
             }
             .center {
                 justify-content: center;
+		margin: 0;
+                position: absolute;
+  	        top: 50%;
             }
             
             button {
              font-family: "Lucida Console", monospace; 
              position: relative;
              border: none;
+	     padding: 0;
              background: transparent;
              cursor: pointer;
              outline-offset: 4px;
