added better invalid game request site

--- a/gba/launcher.html
+++ b/gba/launcher.html
@@ -14,17 +14,14 @@
                 font-family: "Lucida Console", monospace; 
             }
             .center {
-                justify-content: center;
-		margin: 0;
-                position: absolute;
-  	        top: 50%;
+  		    text-align: center;
             }
             
             button {
              font-family: "Lucida Console", monospace; 
              position: relative;
              border: none;
-	     padding: 0;
+	       padding: 0;
              background: transparent;
              cursor: pointer;
              outline-offset: 4px;
@@ -177,6 +174,6 @@
 		  <span class="edge"></span>
 		  <span class="front text"> Try again </span>
 		</button>
-        </div>
+	  </div>
     </body>
 </html>
