--- a/gba/launcher.html
+++ b/gba/launcher.html
@@ -167,13 +167,13 @@
     <body>
         <canvas id="emulator_target" width="240px" height="160px"></canvas>
         <span id="tempMessage"></span>
-        <div class="center">
+        <!--<div class="center">
         <p>Uh oh!<br>Invalid Game Request!</p>
         <button onclick="window.location.href='https://hippole.github.io/gba'">
 		  <span class="shadow"></span>
 		  <span class="edge"></span>
 		  <span class="front text"> Try again </span>
 		</button>
-	  </div>
+	  </div>-->
     </body>
 </html>
