--- a/gba/launcher.html
+++ b/gba/launcher.html
@@ -29,6 +29,21 @@
              user-select: none;
              touch-action: manipulation;
             }
+		
+		span {
+		 font-family: "Lucida Console", monospace; 
+		 color: deepskyblue;
+		 bottom: 0px;
+		 position: absolute;
+		 right: 0px;
+		 display: none;
+		 font-size: 40pt;
+		 font-weight: bold;
+		 text-align: right;
+		 vertical-align: bottom;
+		 font-family: monospace;
+		 display:none;
+	    }
 
             .shadow {
              position: absolute;
