--- a/gba/invalidgame.html
+++ b/gba/invalidgame.html
@@ -14,14 +14,15 @@
                 font-family: "Lucida Console", monospace; 
             }
             .center {
-  		    text-align: center;
+		justify-content: center;
+  		text-align: center;
             }
             
             button {
              font-family: "Lucida Console", monospace; 
              position: relative;
              border: none;
-	       padding: 0;
+	     padding: 0;
              background: transparent;
              cursor: pointer;
              outline-offset: 4px;
