--- a/gba/invalidgame.html
+++ b/gba/invalidgame.html
@@ -112,7 +112,7 @@
     </head>
     <body>
     <div class="center">
-    <img src="sadmac" alt="Very sad mac D:">
+    <img src="sadmac.png" alt="Very sad mac D:">
     <p>Uh oh!<br>Invalid Game Request!</p>
     <button onclick="window.location.href='https://hippole.github.io/gba'">
 		  <span class="shadow"></span>
