remove more  ads because nobody and their grandpa likes ads

--- a/cookieclicker/index.html
+++ b/cookieclicker/index.html
@@ -3,7 +3,7 @@
 <head>
 <!-- external -->
 <script type="text/javascript">
-    window.cookieconsent_options = {"message":"Oh wait i can change this","dismiss":"cookie clicker uses cookies","learnMore":"more Learn","link":"//orteil.dashnet.org/cookieconsentpolicy.html","target":"_blank","theme":"//orteil.dashnet.org/cookieconsent.css","domain":"dashnet.org"};
+    window.cookieconsent_options = {"message":"oh wait i can change this","dismiss":"cookie clicker uses cookies","learnMore":"more Learn","link":"//orteil.dashnet.org/cookieconsentpolicy.html","target":"_blank","theme":"//orteil.dashnet.org/cookieconsent.css","domain":"dashnet.org"};
 </script>
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
@@ -46,13 +46,6 @@ var App=typeof App==='undefined'?0:App;
 
 <!-- ad -->
 <script src="showads.js"></script><!-- this just detects adblockers so we can adjust the layout and play nice -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "ca-pub-8491708950677704",
-          enable_page_level_ads: true
-     });
-</script>
 <!-- /ad -->
 
 <link href="style.css?v=2.055" rel="stylesheet" type="text/css">
@@ -198,7 +191,6 @@ var App=typeof App==='undefined'?0:App;
 			<!-- ad -->
 			<div id="detectAds" class="adBanner" style="background:transparent;width:1px;height:1px;"></div>
 			<div id="support" style="margin-top:130px;">
-				<div class="supportComment">v Sponsored links v</div>
 				<div style="position:relative;">
 				
 					<div style="position:relative;z-index:100;min-height:250px;">
