--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <h4 class="u-align-center u-text u-text-palette-1-base u-text-3">Cookie Clicker</h4>
               <p class="u-align-center u-text u-text-palette-1-base u-text-4">Play cookie clicker on the latest version!<br>
               </p>
-              <a href="https://hippole.github.io/cookieclicker" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-1"><span class="u-icon"></span>&nbsp;Play
+              <a href="/cookieclicker" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-1"><span class="u-icon"></span>&nbsp;Play
               </a>
             </div>
           </div>
@@ -82,7 +82,7 @@
               <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-2" src="images/gameboy.jpg" alt="" data-image-width="1280" data-image-height="720">
               <h4 class="u-align-center u-text u-text-palette-1-base u-text-5">Game Boy Advance</h4>
               <p class="u-align-center u-text u-text-palette-1-base u-text-6">Play tons of GBA games on your browser!</p>
-              <a href="https://hippole.github.io/gba" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-2">Play</a>
+              <a href="/gba" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-2">Play</a>
             </div>
           </div>
           <div class="u-align-center u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle u-video-cover u-white u-list-item-3">
@@ -91,7 +91,7 @@
               <h4 class="u-align-center u-text u-text-palette-1-base u-text-7">2048</h4>
               <p class="u-align-center u-text u-text-palette-1-base u-text-8">Try to get 2048 by shifting tiles to combine them!
               </p>
-              <a href="https://hippole.github.io/2048" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-3">Play</a>
+              <a href="/2048" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-3">Play</a>
             </div>
           </div>
         </div>
@@ -104,7 +104,7 @@
               <h4 class="u-align-center u-text u-text-palette-1-base u-text-9">Tetris</h4>
               <p class="u-align-center u-text u-text-palette-1-base u-text-10">Tetris from 1984. Stack blocks but don't go over the top!
               </p>
-              <a href="https://hippole.github.io/tetris" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-4"><span class="u-icon"></span>Play
+              <a href="/tetris" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-4"><span class="u-icon"></span>Play
               </a>
             </div>
           </div>
