added wordle + small revamp of homepage

--- a/index.html
+++ b/index.html
@@ -21,21 +21,9 @@
       </div></header> 
     <section class="u-align-center u-clearfix u-palette-1-dark-1 u-section-1" id="sec-f60b">
       <div class="u-absolute-hcenter u-expanded u-shape u-shape-svg u-text-palette-4-light-1">
-        <svg class="u-svg-link" preserveAspectRatio="none" viewBox="0 0 160 100" style=""><use xlink:href="#svg-8e55"></use></svg>
-        <svg class="u-svg-content" viewBox="0 0 160 100" x="0px" y="0px" id="svg-8e55"><path d="M133,27.2c-13.9,9.9-25.8,9.9-39.8,0c-9.1-6.4-16.8-6.4-25.9,0c-13.8,9.8-25.1,9.8-38.9,0c-9.2-6.5-15.4-6.5-24.6,0L0,22.4
-	c11.2-8,20.6-8.3,32.2,0c11,7.8,19,8.7,31.3,0c11.6-8.3,22.4-7.9,33.5,0c11.4,8.2,20.3,8.5,32.2,0c11.6-8.3,19.2-8.3,30.8,0
-	l-3.8,4.8C146.9,20.6,142.3,20.6,133,27.2z M133,11c-13.9,9.9-25.8,9.9-39.8,0c-9.1-6.4-16.8-6.4-25.9,0c-13.8,9.8-25.1,9.8-38.9,0
-	C19.2,4.5,13,4.5,3.8,11L0,6.2c11.2-8,20.6-8.3,32.2,0c11,7.8,19,8.7,31.3,0c11.6-8.3,22.4-7.9,33.5,0c11.4,8.2,20.3,8.5,32.2,0
-	c11.6-8.3,19.2-8.3,30.8,0l-3.8,4.8C146.9,4.4,142.3,4.4,133,11z M32.2,38.8c11,7.8,19,8.7,31.3,0c11.6-8.3,22.4-7.9,33.5,0
-	c11.4,8.2,20.3,8.5,32.2,0c11.6-8.3,19.2-8.3,30.8,0l-3.8,4.8c-9.3-6.6-13.9-6.6-23.3,0c-13.9,9.9-25.8,9.9-39.8,0
-	c-9.1-6.4-16.8-6.4-25.9,0c-13.8,9.8-25.1,9.8-38.9,0c-9.2-6.5-15.4-6.5-24.6,0L0,38.8C11.2,30.8,20.6,30.5,32.2,38.8z M133,76.2
-	c-13.9,9.9-25.8,9.9-39.8,0c-9.1-6.4-16.8-6.4-25.9,0c-13.8,9.8-25.1,9.8-38.9,0c-9.2-6.5-15.4-6.5-24.6,0L0,71.4
-	c11.2-8,20.6-8.3,32.2,0c11,7.8,19,8.7,31.3,0c11.6-8.3,22.4-7.9,33.5,0c11.4,8.2,20.3,8.5,32.2,0c11.6-8.3,19.2-8.3,30.8,0
-	l-3.8,4.8C146.9,69.6,142.3,69.6,133,76.2z M133,60c-13.9,9.9-25.8,9.9-39.8,0c-9.1-6.4-16.8-6.4-25.9,0c-13.8,9.8-25.1,9.8-38.9,0
-	c-9.2-6.5-15.4-6.5-24.6,0L0,55.2c11.2-8,20.6-8.3,32.2,0c11,7.8,19,8.7,31.3,0c11.6-8.3,22.4-7.9,33.5,0c11.4,8.2,20.3,8.5,32.2,0
-	c11.6-8.3,19.2-8.3,30.8,0l-3.8,4.8C146.9,53.4,142.3,53.4,133,60z M32.2,87.8c11,7.8,19,8.7,31.3,0c11.6-8.3,22.4-7.9,33.5,0
-	c11.4,8.2,20.3,8.5,32.2,0c11.6-8.3,19.2-8.3,30.8,0l-3.8,4.8c-9.3-6.6-13.9-6.6-23.3,0c-13.9,9.9-25.8,9.9-39.8,0
-	c-9.1-6.4-16.8-6.4-25.9,0c-13.8,9.8-25.1,9.8-38.9,0c-9.2-6.5-15.4-6.5-24.6,0L0,87.8C11.2,79.8,20.6,79.5,32.2,87.8z"></path></svg>
+			<div class="fill">
+				<img src="./images/wave.png" alt="" />
+			</div>
       </div>
       <img class="u-image u-image-1" src="images/dfsfdsf.jpg" data-image-width="1200" data-image-height="900">
       <div class="u-align-left u-container-style u-group u-white u-group-1">
@@ -110,11 +98,11 @@
           </div>
           <div class="u-align-center u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle u-white u-list-item-5">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-5">
-              <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-5" src="images/questionmark.png" alt="" data-image-width="200" data-image-height="200">
-              <h4 class="u-align-center u-text u-text-palette-1-base u-text-11">Coming Soon</h4>
-              <p class="u-align-center u-text u-text-palette-1-base u-text-12"> Coming Soon<br>What will it be?
+              <img class="u-border-2 u-border-grey-75 u-expanded-width u-image u-image-default u-image-5" src="images/wordle.png" alt="" data-image-width="200" data-image-height="200">
+              <h4 class="u-align-center u-text u-text-palette-1-base u-text-11">Wordle</h4>
+              <p class="u-align-center u-text u-text-palette-1-base u-text-12">Guess the hidden word in 6 tries or less every day!
               </p>
-              <a href="javascript: void(0)" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-5">Coming Soon</a>
+              <a href="/wordle" class="u-active-white u-border-0 u-btn u-btn-round u-button-style u-hover-white u-palette-4-light-1 u-radius-50 u-text-active-palette-1-base u-text-hover-palette-1-base u-text-palette-1-base u-btn-5">Play</a>
             </div>
           </div>
           <div class="u-align-center u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle u-video-cover u-white u-list-item-6">
@@ -163,7 +151,7 @@
     </section>
     <section class="u-align-center u-clearfix u-palette-1-base u-section-4" id="sec-5d76">
       <div class="u-expanded-width u-palette-4-light-1 u-shape u-shape-rectangle u-shape-1"></div>
-      <img class="u-align-left u-image u-left-0 u-image-1" data-image-width="1600" data-image-height="1000" src="images/xsx.jpg">
+      <img class="u-align-left u-image u-left-0 u-image-1" data-image-width="1600" data-image-height="1000" src="images/github.png">
       <h2 class="u-text u-text-1">Source Code</h2>
       <p class="u-text u-text-2">All the source code will be found at&nbsp;<br>
         <span class="u-text-palette-3-base">https://github.com/hippole/hippole.github.io</span>
